--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- 
 <h1>{{title}}</h1>
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
@@ -5,8 +6,8 @@
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
-
-
+-->
+<app-hero-form></app-hero-form>
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
